<resources>
    <string name="app_name">Hikers Watch</string>
    <string name="hikers_watch">Hikers Watch</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="altitude">Altitude:</string>
    <string name="address">Address:</string>
    <string name="could_not_find_address">Could not find addresss</string>
</resources>
